infrastructure/ticketing/manifests/faveo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: faveo-httproute
  namespace: crownlabs-ticketing
  labels:
    crownlabs.polito.it/gw-access: "crownlabs-main-production"
    crownlabs.polito.it/public-route: "true"
spec:
  parentRefs:
  - name: crownlabs-main
    namespace: crownlabs-production
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: faveo
      port: 80
  hostnames:
  - "support.crownlabs.polito.it"
